fixed icon display on mobile

--- a/css/ghpages-materialize.css
+++ b/css/ghpages-materialize.css
@@ -4930,7 +4930,7 @@ p {
   width: 150px;
   height: 115px;
   float: left;
-  margin: 0px 10px 15px 10px;
+  margin: 0px 0px 15px 0px;
 }
 .icon-holder p {
   margin: 0px 0;
